FIX: spacing

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -108,6 +108,7 @@ p {
 }
 
 .btn {
+    display: block;
     border-radius: 60px;
     padding: 0.5rem 1.5rem;
     width: fit-content;
